testsuite/tests/modifiers/should_fail/ModifiersExprUnexpectedInQuote.stderr
ModifiersExprUnexpectedInQuote.hs:8:19: error: [GHC-65904]
    Modifier not (yet) handled by Template Haskell
      At most one modifier is supported
      %1 %1

